--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ description = "Model Railroad Time Table generating program"
 [dependencies]
 tk = "0.1.10"
 time_table = "0.1.3"
+tuplex = "=0.1.2"
+tcl = "0.1.8"
